feat: downlode documnet  api and deletd file form s3 bucket api
