# src/routes/documentRoutes.js
@@ -5,6 +5,8 @@ const { verifyToken } = require("../middlewares/authMiddleware");
 // const { validateRequest } = require("../middlewares/validateRequest");
 // const { createDocumentSchema } = require("../validations");
 const { upload, validateFile } = require("../middlewares/upload");
+const { validateRequest } = require("../middlewares/validateRequest");
+const { downloadFileQuerySchema } = require("../validations/documentValidation");
 
 const router = express.Router();
 
@@ -16,16 +18,20 @@ router.post(
   documentController.addDocument,
 );
 
+//download document from s3 bucket using file key
+router.get(
+  "/download-url",
+  verifyToken,
+  validateRequest(downloadFileQuerySchema),
+  documentController.getDownloadFile,
+);
+
+// delete document from s3 bucket using file key
+router.delete("/delete", verifyToken, documentController.deleteFile);
 router.post("/list", verifyToken, documentController.listDocuments);
 router.post("/list-paginated", verifyToken, documentController.listDocumentsPaginated);
 router.get("/list", verifyToken, documentController.getDocumentList);
 router.get("/:id", verifyToken, documentController.getDocumentById);
 router.delete("/:id", verifyToken, documentController.deleteDocument);
-
-//download document from s3 bucket using file key
-router.get("/download-url", documentController.getDownloadFile);
-
-//delete document from s3 bucket using file key
-// router.delete("/delete", FileController.deleteFile);
 
 module.exports = router;
